--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
     <title>HomePages Manager</title>
     %sveltekit.head%
   </head>
-  <body data-sveltekit-preload-data="hover" class="bg-black">
+  <body data-sveltekit-preload-data="hover" class="bg-zinc-950">
     <div style="display: contents">%sveltekit.body%</div>
   </body>
 </html>
